[package]
name = "rest-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.2", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
ureq = "2.4.0"
env_logger = "0.9.0"
log = "0.4.14"
anyhow = "1.0.53"
bytes = "1.1.0"
serde_derive = "1.0.136"
serde = "1.0.136"
x509-parser = { version = "0.14.0", features = ["verify", "validate"] }
ring = "0.16.20"
base64 = "0.13.0"
chrono = "0.4.19"
hex = "0.4.3"
pkcs8 = { version = "0.9.0", features = ["pem"] }
serde_qs = "0.10.1"
bip32 = "0.4.0"
serde_json = "1.0.93"
[dev-dependencies]
pretty_assertions = "1.1.0"
[features]

[profile.release]
strip="debuginfo"
